--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ python-multipart
 aiofiles
 starlette
 typing-extensions
-pipecat-ai
-pipecat-ai[cartesia,openai,silero,deepgram]
+pipecat-ai==0.0.53
+pipecat-ai[cartesia,openai,silero,deepgram,elevenlabs]
 openai
 pydantic-settings
