feat: Enhance call service and websocket functionality

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,21 @@
 OPENAI_API_KEY=
 DEEPGRAM_API_KEY=
 CARTESIA_API_KEY=
+ELEVEN_API_KEY=
+
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
+NGROK_AUTH_TOKEN=
+FIXA_KEY=
 
 PLIVO_AUTH_ID=
 PLIVO_AUTH_TOKEN=
 PLIVO_FROM_NUMBER=
+# PHONE_NUMBER_TO_CALL=
 
-#ngrok url to test on local
 BASE_URL=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
+AWS_REGION=
